<resources>
    <string name="app_name">GankKotlin</string>
    <string name="welfare">福利</string>
    <string name="history">历史资讯</string>
    <string name="up_refresh_load_more">上拉加载更多</string>

    <string name="menu_history">历史浏览</string>
    <string name="menu_favorite">收藏文章</string>
    <string name="menu_about">关于项目</string>
    <string name="text_realized_functions_title">已实现功能</string>
    <string name="text_realized_functions_list">浏览分类文章，图片列表，查看有发布文章的日期列表，查看某一天的文章，历史浏览文章列表，收藏文章及列表，大图浏览以及下载</string>
    <string name="text_functions_todo_title">待实现功能</string>
    <string name="text_functions_todo_list">WebView浏览html存在bug（部分元素不能显示），代码整理等</string>
    <string name="text_libraries_title">涉及到的开源库</string>
    <string name="text_libraries_list">Retrofit2(okhttp，gson，)，RxJava2，Picasso，design库，constraint-layout，以及2个ui库(TimeLineItemDecoration，featuredrecyclerview)，greendao，PhotoView</string>
    <string name="text_github_title">github地址</string>
    <string name="text_github_url">https://github.com/barran-tan/GankKotlin</string>
    <string name="text_gank_api_title">关于api</string>
    <string name="text_gank_api_url">http://gank.io/api</string>


    <string name="dialog_message_clear_history">确定清除全部浏览记录吗\n(不会删除收藏列表)</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="dialog_message_input">请输入搜索内容</string>
    <string name="dialog_search_title">搜标题</string>
    <string name="dialog_search_author">搜作者</string>

</resources>
