<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_about_toolbar"
        style="@style/ToolbarStyle"
        app:layout_constraintTop_toBottomOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/activity_about_tv_functions_realized_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_margin"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_realized_functions_title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintTop_toBottomOf="@id/activity_about_toolbar" />

    <TextView
        android:id="@+id/activity_about_tv_functions_realized_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_text"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_realized_functions_list"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_functions_realized_title" />

    <TextView
        android:id="@+id/activity_about_tv_functions_todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_margin"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_functions_todo_title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_functions_realized_list" />

    <TextView
        android:id="@+id/activity_about_tv_functions_todo_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_text"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_functions_todo_list"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_functions_todo_title" />

    <TextView
        android:id="@+id/activity_about_tv_libraries_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_margin"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_libraries_title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_functions_todo_list" />

    <TextView
        android:id="@+id/activity_about_tv_libraries_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_text"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_libraries_list"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_libraries_title" />

    <TextView
        android:id="@+id/activity_about_tv_github_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_margin"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_github_title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_libraries_list" />

    <TextView
        android:id="@+id/activity_about_tv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_text"
        android:autoLink="all"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_github_url"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_github_title" />

    <TextView
        android:id="@+id/activity_about_tv_gank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_margin"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_gank_api_title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_github" />

    <TextView
        android:id="@+id/activity_about_tv_gank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_text"
        android:autoLink="all"
        android:paddingLeft="@dimen/default_dimen_margin"
        android:paddingRight="@dimen/default_dimen_margin"
        android:text="@string/text_gank_api_url"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintTop_toBottomOf="@id/activity_about_tv_gank_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
